--- a/css/main.css
+++ b/css/main.css
@@ -1660,7 +1660,7 @@ h2.title {
     background: #F0F0E9;
     color: #696763;
     display: inline-block;
-    font-size: 16px;
+    font-size: 20px;
     height: 28px;
     overflow: hidden;
     text-align: center;
@@ -1675,19 +1675,19 @@ h2.title {
     font-size: 16px;
     text-align: center;
     font-family: 'Roboto', sans-serif;
-
+    width: 35px;
 }
 
 
 .cart_delete {
-    display: block;
+
     margin-right: -12px;
     overflow: hidden;
 }
 
 
 .cart_delete a {
-    background: #F0F0E9;
+    background: #FE980F;
     color: #FFFFFF;
     padding: 5px 7px;
     font-size: 16px
