--- a/css/main.css
+++ b/css/main.css
@@ -1197,7 +1197,7 @@ h2.title {
 }
 
 .view-product img {
-    border: 1px solid #F7F7F0;
+    border: 1px solid #FE980F;
     height: 380px;
     width: 100%;
 }
@@ -1221,7 +1221,9 @@ h2.title {
 
 #similar-product .carousel-inner .item img {
     display: inline-block;
-    margin-left: 15px;
+    margin-left: 2px;
+    margin-top: 2px;
+    border: 1px solid #FE980F;
 }
 
 .item-control {
